--- a/roles/docker-registry/templates/docker-registry.conf.j2
+++ b/roles/docker-registry/templates/docker-registry.conf.j2
@@ -4,8 +4,9 @@ env NAME={{ init_service_name }}
 env USER=root
 start on (filesystem) and started docker
 stop on runlevel [016] or stopped docker
+pid file /var/run/{{ init_service_name }}.pid
 
-respawn
+respawn limit 1 10
 
 script
 	echo "exec docker run -d -P -t -i {{ docker_image_name }}"
