Revert "Added docker registry configuration template and updated references"
This reverts commit 305a16bb1103d57d7b5d879cd0449ee2b15f73c7.

--- a/roles/docker-registry/templates/Dockerfile.j2
+++ b/roles/docker-registry/templates/Dockerfile.j2
@@ -33,8 +33,8 @@ run pip install /docker-registry/depends/docker-registry-core
 # Install registry
 run pip install file:///docker-registry#egg=docker-registry[bugsnag,newrelic]
 
-env DOCKER_REGISTRY_CONFIG /docker-registry/config/config.yml
-env SETTINGS_FLAVOR prod
+env DOCKER_REGISTRY_CONFIG /docker-registry/config/config_sample.yml
+env SETTINGS_FLAVOR dev
 
 expose 5000
 
